--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dist": "npm run clean && npm run js && npm run sass && npm run jekyll && gulp dist",
         "jekyll": "jekyll build --source src --destination build",
         "js": "webpack -d --progress --colors",
-        "sass": "node-sass --include-path src/sass src/sass/main.scss src/styles/site.css",
+        "presass": "gulp copyfonts",
+        "sass": "node-sass --include-path src/sass --include-path node_modules/font-awesome/scss src/sass/main.scss src/styles/site.css",
         "postsass": "postcss -r -c postcss.config.json src/styles/site.css && cssmin src/styles/site.css > src/styles/site.min.css",
         "start": "npm run clean && parallelshell \"browser-sync start --config bs-config.js\" \"npm run watch\"",
         "test": "echo \"Error: no test specified\" && exit 1",
