--- a/src/_config.yml
+++ b/src/_config.yml
@@ -1,6 +1,6 @@
 
 #
-# www.daytondv.com jekyll settings
+# www.daytondv.org jekyll settings
 #
 
 # Site settings
@@ -8,7 +8,7 @@ title: Dayton Data Visualization
 email: bowmanmc@gmail.com
 description: Dayton Data Visualization Group
 baseurl: ""
-url: "http://www.daytondv.com"
+url: "http://www.daytondv.org"
 twitter_username: daytondv
 github_username:  daytondv
 
