--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "noprompt": true
   },
   "dependencies": {
+    "font-awesome": "^4.6.3",
     "jquery": "^2.1.4",
     "typeplate-starter-kit": "^3.0.2"
   },
