link to the web mapping workshop tutorial

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -20,6 +20,9 @@ collections:
     sponsors:
         output: true
         permalink: /sponsor/:path/
+    tutorials:
+        output: true
+        permalink: /tutorial/:path/
 
 # Build settings
 markdown: kramdown
