meeting details for our nov 10th event

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -11,6 +11,7 @@ baseurl: ""
 url: "http://www.daytondv.org"
 twitter_username: daytondv
 github_username:  daytondv
+future: true
 
 # Collections
 collections:
