--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "presass": "gulp copyfonts",
     "sass": "node-sass --include-path src/sass --include-path node_modules src/sass/main.scss src/styles/site.css",
     "postsass": "postcss -r -c postcss.config.json src/styles/site.css && cssmin src/styles/site.css > src/styles/site.min.css",
-    "start": "npm run clean && parallelshell \"browser-sync start --config bs-config.js\" \"npm run watch\"",
+    "browsersync": "browser-sync start --config bs-config.js",
+    "prestart": "npm run clean",
+    "start": "npm-run-all --parallel browsersync watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "parallelshell \"npm run watch:jekyll\" \"npm run watch:js\" \"npm run watch:sass\"",
+    "watch": "npm-run-all --parallel watch:jekyll watch:js watch:sass",
     "watch:jekyll": "nodemon -w src -e html,md,png,jpg,gif,svg,yml,xml,js,css --ignore src/javascript --delay 1 -x \"npm run jekyll\"",
     "watch:js": "webpack -d --progress --colors --watch",
     "watch:sass": "nodemon -e scss -w src/sass -x \"npm run sass\""
@@ -45,7 +47,7 @@
     "moment": "^2.10.6",
     "node-sass": "^3.3.3",
     "nodemon": "^1.7.2",
-    "parallelshell": "^2.0.0",
+    "npm-run-all": "^4.0.2",
     "postcss-cli": "^2.2.0",
     "rimraf": "^2.4.3",
     "script-loader": "^0.6.1",
