--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist": "npm run clean && npm run js && npm run sass && npm run jekyll && gulp dist",
     "jekyll": "jekyll build --source src --destination build",
     "js": "webpack -d --progress --colors",
-    "presass": "gulp copyfonts",
+    "presass": "copyfiles -f node_modules/font-awesome/fonts/* src/fonts",
     "sass": "node-sass --include-path src/sass --include-path node_modules src/sass/main.scss src/styles/site.css",
     "postsass": "postcss -r -c postcss.config.json src/styles/site.css && cssmin src/styles/site.css > src/styles/site.min.css",
     "browsersync": "browser-sync start --config bs-config.js",
@@ -39,6 +39,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "browser-sync": "*",
+    "copyfiles": "^1.2.0",
     "cssmin": "^0.4.3",
     "del": "^2.2.0",
     "gh-pages-deploy": "^0.4.2",
